brain/sources/prod-metadata/objects/Background_Check_Employment__c/Background_Check_Employment__c.object-meta.xml
<CustomObject>
    <label>Background Check Employment</label>
    <nameField>
        <displayFormat>BGC-{00000}</displayFormat>
        <label>Background Check Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Background Check Employment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>