brain/sources/prod-metadata/objects/Background_Check_Employment__c/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <label>Background Check</label>
    <referenceTo>Background_Check__c</referenceTo>
    <relationshipName>Background_Check_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>