brain/sources/prod-metadata/objects/Background_Check_Employment__c/fields/Employer_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Employer_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employer Confirmed</label>
    <type>Checkbox</type>
</CustomField>