brain/sources/prod-metadata/objects/Background_Check_Employment__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <label>Employer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>