brain/sources/prod-metadata/objects/Background_Check_Employment__c/fields/Present__c.field-meta.xml
<CustomField>
    <fullName>Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Employer</label>
    <type>Checkbox</type>
</CustomField>