brain/sources/prod-metadata/objects/Background_Check_Employment__c/fields/Ref_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Ref_2_Name__c</fullName>
    <label>Ref 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>