brain/sources/prod-metadata/objects/Background_Check_Employment__c/fields/Ref_3_Email__c.field-meta.xml
<CustomField>
    <fullName>Ref_3_Email__c</fullName>
    <label>Ref 3 Email</label>
    <type>Email</type>
</CustomField>