brain/sources/prod-metadata/objects/Background_Check_Employment__c/fields/Ref_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Ref_3_Name__c</fullName>
    <label>Ref 3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>