brain/sources/prod-metadata/objects/Background_Check_Employment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>